Updated cart and resolved checkout visibility

--- a/Scaffolding-Files/app/public/css/checkout.css
+++ b/Scaffolding-Files/app/public/css/checkout.css
@@ -1,17 +1,3 @@
-
-.back-to-cart {
-  background-color: #0d4508;
-  padding: 10px 15px;
-  border: 1px solid #ffffff;
-  border-radius: 5px;
-  text-decoration: none; /* Remove underline */
-  color: white;
-  font-size: 14px;
-}
-
-.back-to-cart:hover {
-  background-color: #0056b3;
-}
   .container {
     max-width: 800px;
     margin: auto;
@@ -37,14 +23,14 @@
     justify-content: space-between; /* Distribute space between the list items */
     align-items: center; /* Centers items vertically */
     list-style: none;
-    
+       
   }
   
   li.backLink {
-    flex: 1; /* Takes up available space */
-    text-align: left; /* Centers text inside the li */
-    justify-self: flex-start; /* Align the item to the flex-end */
-  }
+    text-align: left; 
+    justify-self: left;
+   }
+   
   
   li.buttonlink {
     text-align: right; /* Align text to the right */
